--- a/src/languages/ta-IN/commands/misc.json
+++ b/src/languages/ta-IN/commands/misc.json
@@ -1,6 +1,6 @@
 {
 	"ping": {
-		"title": "I am still alive! 🍺",
-		"description": "Pong! Bot Latency {{latency}}ms"
+		"title": "நான் இன்னும் உயிரோடு இருக்கிறேன்! 🍺",
+		"description": "பாங்! பாட் தாமதம் {{latency}}ms"
 	}
 }
