--- a/src/languages/nl-NL/commands/misc.json
+++ b/src/languages/nl-NL/commands/misc.json
@@ -1,6 +1,6 @@
 {
 	"ping": {
-		"title": "I am still alive! 🍺",
-		"description": "Pong! Bot Latency {{latency}}ms"
+		"title": "Ik leef nog! 🍺",
+		"description": "Stank! Bot latency {{latency}}ms"
 	}
 }
