chore(i18n-crowdin): new translations for misc.json (Hindi)

--- a/src/languages/hi-IN/commands/misc.json
+++ b/src/languages/hi-IN/commands/misc.json
@@ -1,6 +1,6 @@
 {
 	"ping": {
-		"title": "I am still alive! 🍺",
-		"description": "Pong! Bot Latency {{latency}}ms"
+		"title": "मैं अभी भी जीवित हूँ! 🍺",
+		"description": "पोंग! एमएस {{latency}}बॉट विलंबता"
 	}
 }
