chore(i18n-crowdin): new translations for misc.json (Norwegian Nynorsk)

--- a/src/languages/nn-NO/commands/misc.json
+++ b/src/languages/nn-NO/commands/misc.json
@@ -1,6 +1,6 @@
 {
 	"ping": {
 		"title": "I am still alive! 🍺",
-		"description": "Pong! Bot Latency {{latency}}ms"
+		"description": "Testing again, if this works. Pong! Bot Latency {{latency}}ms"
 	}
 }
