chore(i18n-crowdin): new translations for misc.json (Dutch)

--- a/src/languages/nl-NL/commands/misc.json
+++ b/src/languages/nl-NL/commands/misc.json
@@ -1,6 +1,6 @@
 {
 	"ping": {
 		"title": "Ik leef nog! 🍺",
-		"description": "Testing again, if this works. Pong! Bot Latency {{latency}}ms"
+		"description": "Nogmaals testen, als dit werkt. Stank! Bot latency {{latency}}ms"
 	}
 }
