--- a/src/languages/ta-IN/commands/misc.json
+++ b/src/languages/ta-IN/commands/misc.json
@@ -1,6 +1,6 @@
 {
 	"ping": {
 		"title": "நான் இன்னும் உயிரோடு இருக்கிறேன்! 🍺",
-		"description": "Testing again, if this works. Pong! Bot Latency {{latency}}ms"
+		"description": "இது வேலை செய்தால், மீண்டும் சோதனை. பாங்! பாட் தாமதம் {{latency}}ms"
 	}
 }
