--- a/src/languages/no-NO/commands/misc.json
+++ b/src/languages/no-NO/commands/misc.json
@@ -1,6 +1,6 @@
 {
 	"ping": {
-		"title": "I am still alive! 🍺",
-		"description": "Testing again, if this works. Pong! Bot Latency {{latency}}ms"
+		"title": "Jeg lever fortsatt! 🍺",
+		"description": "Tester igjen, hvis dette fungerer. Stank! Ventetid for bot {{latency}}ms"
 	}
 }
