--- a/src/languages/de-DE/commands/misc.json
+++ b/src/languages/de-DE/commands/misc.json
@@ -1,6 +1,6 @@
 {
 	"ping": {
 		"title": "Ich lebe noch! 🍺",
-		"description": "Stinken! Bot-Latenz {{latency}}ms"
+		"description": "Nochmal testen, ob das funktioniert. Stinken! Bot-Latenz {{latency}}ms"
 	}
 }
