chore(i18n-crowdin): new translations for misc.json (Tamil)

--- a/src/languages/ta-IN/commands/misc.json
+++ b/src/languages/ta-IN/commands/misc.json
@@ -1,6 +1,27 @@
 {
 	"ping": {
 		"title": "நான் இன்னும் உயிரோடு இருக்கிறேன்! 🍺",
-		"description": "இது வேலை செய்தால், மீண்டும் சோதனை. பாங்! பாட் தாமதம் {{latency}}ms"
+		"message": "பாங்! Websocket தாமதம் {{latency}}ms"
+	},
+	"reminder": {
+		"error": {
+			"argMissing": "தயவுகூர்ந்து பயனிலைகளை சரியான வடிவமைப்பில் வழங்கவும்.\nஉதாரணம்: 'ஒன்றைப் பற்றி நினைவூட்டுங்கள்'.",
+			"invalidTime": "வழங்கப்பட்ட நேரம் செல்லுபடியாகாததாகத் தெரிகிறது. சரியான வடிவமைப்பில் நேரத்தை வழங்கவும்.\nஉதாரணம்: '1h, 1d, 1வாரம் முயற்சி செய்து பாருங்கள்'.",
+			"messageMissing": "நினைவூட்டப்பட வேண்டிய செய்தியை வழங்கவும்.\nஉதாரணம்: 'ஒன்றைப் பற்றி நினைவூட்டுங்கள்'.",
+			"notAllowedTime": "2 நிமிடங்களுக்கும் குறைவான நேரம் அனுமதிக்கப்படாது.",
+			"idMissing": "நீக்க நினைவூட்டலின் ID -ஐ வழங்கவும்.\nஉதாரணம்: 'நினைவூட்டல் நீக்கு 1'.",
+			"noActiveReminders": "உங்களிடம் செயலில் உள்ள நினைவூட்டல்கள் எதுவும் இல்லை.",
+			"noReminder": "வழங்கப்பட்ட ID உடன் நினைவூட்டல் எதுவும் காணப்படவில்லை.",
+			"contextMenuBypass": "நல்ல முயற்சி! மற்ற பயனர்களுக்கான கட்டளையை உங்களால் இயக்க முடியாது.",
+			"deleteInvalidArg": "தயவுகூர்ந்து பயனிலைகளை சரியான வடிவமைப்பில் வழங்கவும்.\nஉதாரணம்: 'நினைவூட்டல் நீக்கு 1'."
+		},
+		"success": {
+			"reminderAdded": "ரோஜர் என்று 🚨! {{time}} நான் {{message}}பற்றி உங்களுக்கு நினைவூட்டுகிறேன். 'தனித்துவமான ஐடி: {{id}}'",
+			"reminderCleared": "{{count}} {{word}}வெற்றிகரமாக நீக்கப்பட்டது",
+			"reminderDeleted": "நினைவூட்டி வெற்றிகரமாக நீக்கப்பட்டது"
+		},
+		"util": {
+			"prompter": "'{{count}}' {{word}}நீக்க நிச்சயமாக விரும்புகிறீர்களா?"
+		}
 	}
 }
